--- a/hello_i1e4/ios/Runner/Info.plist
+++ b/hello_i1e4/ios/Runner/Info.plist
@@ -47,5 +47,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
+	<key>NSMicrophoneUsageDescription</key>
+	
 </dict>
 </plist>
