--- a/hello_i1e4/pubspec.yaml
+++ b/hello_i1e4/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.0
   provider: ^6.0.5
+  swipeable_tile:
+  image_picker:
+
 
 dev_dependencies:
   flutter_test:
