--- a/hello_i1e4/ios/Runner/Info.plist
+++ b/hello_i1e4/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진에 액세스하기 위해 권한이 필요합니다.</string>
 </dict>
 </plist>
